jupyter.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jupyter-spark # Same namespace as the deployment
  name: jupyter-spark # Name of the ingress (see kubectl get ingress -A)
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-generic # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  50m # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - "jupyter.bd.alexiou.me" # Host to access nextcloud
    secretName: jupyter-spark-cert-tls # Name of the certifciate (see kubectl get certificate -A)
  rules:
  - host: "jupyter.bd.alexiou.me" # Host to access nextcloud
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: jupyter-spark # Mapping to the service (see kubectl get services -n nextcloud)
            port:
              number: 8888 # Mapping to the port (see kubectl get services -n nextcloud)
